# (C) Albert Mietus, 2025. Part of Castle/CCastle project

import logging; logger = logging.getLogger(__name__)
import typing as PTH                                                                                  # Python TypeHints

from castle import aigr
from castle.writers.RPy.aid import Block, TextBlock

from castle.monorail.base.visitors import Visitor

from ..aid.convert import fString_2_modulo
from ..aigr.dispatch_tables import Build_EventDispatchTable
from . walker import Walker
from . machinery import Machinery
from . portray import Portray
from . idref import IDRef


class Renderer(Visitor):
    _defaultType=str                      #used in Visitor, to return a default value of the right type

    def __init__(self,
                     walker:PTH.Optional[Walker]=None,
                     machinery:PTH.Optional[Machinery]=None,
                     portray:PTH.Optional[Portray]=None,
                     idref:PTH.Optional[IDRef]=None,
                     **kw):
        super().__init__(**kw)
        self.walker = walker if walker else Walker()
        self.machinery = machinery if machinery else Machinery() # type: ignore[abstract] # Machinery-baseclass selects a subclass ad instance that one.
        self.portray = portray if portray else Portray(self)
        self.idref   = idref if idref else IDRef(self)
        logger.info( "Renderer: Using Machinery=%s", type(self.machinery).__name__)
        logger.debug("Renderer: walker=%s, machinery=%s, portray=%s, idref=%s", self.walker, self.machinery, self.portray, self.idref,)

    def render(self, node: aigr.AIGR) ->str:
        """"`render` is the main entrypoint.
        It will call ``visit_*`` for `node`; where the class of `node` determines the ``*-suffix``.

        Typically, those visitors will
        - render the node itself
        - call render_subNodes() to render those subnodes
          - which uses the `walker` to find all subnodes
            (but not always, as some are "fixed")
        - call the self depart() -- another visitor, which default to no-op

        `render()` will always return a str --whereas the visitors return a TextBlock -- by converting it to a str."""

        logger.debug("Going to render %s", node)
        txt = Block()
        txt += self.visit(node)
        return str(txt)


    def render_subNodes(self, node)-> PTH.Optional[Block]:
        subnodes = self.walker.visit(node)
        if not subnodes:
            logger.debug("%s.render_subNodes: No subnodes --- node: %s" , type(node).__name__, node)
            return None

        txt = Block()
        logger.debug("%s.render_subNodes (len=%s)-> %s ---node: %s" ,  type(node).__name__, len(subnodes), subnodes, node)
        for next_node in subnodes if subnodes else []:
            txt += self.visit(next_node)
        return txt

    def visit_ComponentInterface(self, node)			-> TextBlock:
        interface_txt = self.portray.cc_CI_elm_prefix(node.name)
        inherit_from  = f"{self.portray.cc_CI_elm_prefix(node.based_on.name)}" if node.based_on else self.portray.default_component()

        txt = Block(f'{interface_txt} = {self.portray.BuildInComponentInterface()}(')
        txt.sub(Block((
            f'name         = "{node.name}",',
            f'inherit_from = {inherit_from},',
            f'ports        = [],',
            f')')))

        # Append the ports; after defining the port structure; as each port-def refers to the port.
        for portID in node.ports:
            assert isinstance(portID, aigr.ID), f"Expected portID={portID} is an ID, but it is {type(portID)}"
            assert isinstance(portID.context, aigr.Ref), f"Expected ID.Ref, but it isn't. {portID} -- {repr(portID)}"
            port_ref :aigr.Port = portID.context.reference
            logger.info("visit_ComponentInterface: Adding a port; portID=%s port_ref=%s", portID, port_ref)

            port_txt = Block(f"{interface_txt}.ports.append(")
            l1 = Block(f'''buildin.CC_B_C_PortID(name="{portID}",''') # XXX Portray:`CC_B_C_PortID`
            l1.sub(Block((
                f'''portNo=-1, # Not used?''',
                f'''protocol={self.portray.Port2Protocol(port_ref)},''',            # XXX Only type Protocol is supported now
                f'''direction={self.portray.PortDirection(port_ref)},''',
                f'''part_of={interface_txt}))''')))
            port_txt.sub(l1)
            txt += port_txt
        return txt


    def visit_ComponentImplementation(self, node)		-> TextBlock:
        gen_cls_name = self.portray.CC_cls_prefix(node.name)
        isa_elm_name = self.portray.cc_C_elm_prefix(node.name)

        txt = Block((
            f"class {gen_cls_name}({self.portray.BuildInComponent()}):",
            f"",))

        init = Block(f"def __init__(self, *args):")
        init.sub(Block((
            f"{self.portray.BuildInComponent()}.__init__(self, isa={isa_elm_name})",
            f"self._castle_init(*args)",)))
        txt.sub(init)

        txt.sub(self.render_subNodes(node))
        txt += self.depart(node)
        return txt

    def depart_ComponentImplementation(self, node)		-> TextBlock:
        txt = Block()
        txt += self._render_ComponentClass(node)
        txt += self._DispatchTables(node)
        return txt

    def _render_ComponentClass(self, node)               -> TextBlock:
        isa_elm_name = self.portray.cc_C_elm_prefix(node.name)
        elm = Block(f"{isa_elm_name} = buildin.CC_B_ComponentClass(")# XXX isa # XXX Portray:`CC_B_ComponentClass`
        ind = Block(f"interface = {self.portray.cc_CI_elm_prefix(node.name)},")
        ind += ")"
        elm.sub(ind)
        return elm

    def _DispatchTables(self, node)                      -> TextBlock:
        txt = Block()
        txt += self._EventDispatchTables(node)
        if True: #partial implementation: check that we have ONLY event-handlers
            for h in node.handlers:
                assert isinstance(h, aigr.EventHandler), f"Only EventHandlers are supported for now in DispatchTables; got {h}"
        return txt

    def _EventDispatchTables(self, node)                 -> TextBlock:
        ports :list[aigr.ID] = [h.port for h in node.handlers]
        logger.debug("_EventDispatchTables: ports=%s -- node=%s", ports, node)

        tables =[]
        for port in ports: # How about (inheriterd) ports that have no handlers here?
            e_table = Build_EventDispatchTable(comp=node, port_name=port)
            tables.append(e_table)

        txt = Block()
        for table in tables:
            logger.debug("_EventDispatchTables: table=%s", table)
            txt += self.machinery.render_EventDispatchTable(self, table)
        return txt


    def _render_def(self, node, callDef_name=None)       -> Block:
        if callDef_name is None:
            callDef_name = self.portray.callDef_name(node.name)
        parms = ', '.join(str(p.name) for p in node.parameters)
        return Block(f"def {callDef_name}(self, {parms}):")

    def visit_Method(self, node)						 ->  TextBlock:
        txt = self._render_def(node)
        txt.sub(self.render_subNodes(node))
        txt += self.depart(node)
        return txt

    def visit_Initializer(self, node)					 ->  TextBlock:   #BUSY
        txt = self._render_def(node, callDef_name="_castle_init")
        txt.sub(self.render_subNodes(node))
        txt += self.depart(node)
        return txt

    def visit_EventHandler(self, node)					 ->  TextBlock:
        txt = self._render_def(node)
        txt.sub(self.render_subNodes(node))
        txt += self.depart(node)
        return txt

    def visit_Body(self, node)							 ->  TextBlock:
        txt = Block(self.render_subNodes(node))
        txt += self.depart(node)
        return txt

    def visit_VoidCall(self, node)						 ->  TextBlock:
        txt =  self.render_subNodes(node)
        txt += self.depart(node)
        return txt



##############################################################################
    def XXX_OLD_visit_Call(self, node)							->  TextBlock:
        logger.info("visit_Call: %s", node)   #XX info->debug
        if isinstance(node.callable, aigr.ID):
            callable = self.visit(node.callable)
            try: #HACK
                if isinstance(node.callable.context.reference, aigr.Method):
                    callable = "self."+str(callable)
            except AttributeError: pass
        else:
            raise NotImplementedError(node)
        args=", ".join(str(self.visit(a)) for a in node.arguments) # XXX
        txt = f'{callable}({args})'
        logger.info("visit_Call: %s -> %s", node, txt)   #XX info->debug 
        return txt
##############################################################################

    def visit_Call(self, node)							 ->  TextBlock:
        node = PTH.cast(aigr.Call, node)
        logger.debug("visit_Call: %s", node)
        call = self._render_callable(node)
        args = self._render_args(node)
        return f"{call}({args})"

    def _render_callable(self, node)                     -> TextBlock:
        if not isinstance(node.callable, aigr.ID):
            raise NotImplementedError(f"""Currenly a call to {node.callable=} is not supported
                                           Only `<ID>(...)` is implemented to to {type(node.callable)=}""")
        #else
        callable = self.visit(node.callable)
        try: #HACK XXX
            if    isinstance(node.callable.context, aigr.Ref) \
              and isinstance(node.callable.context.reference, aigr.Method):
                callable = "self."+str(callable)
        except AttributeError: pass
        return callable

    def _render_args(self, node)                         -> TextBlock:
        rendered_args = list((self.visit(a) for a in node.arguments))
        assert False, "Need the new Bundler"



##############################################################################



    def visit__literal(self, node)						 ->  TextBlock:
        if node.type == aigr.types.string or node.type is None:
            return f"'''{node.value}'''"
        elif isinstance(node.type, aigr.types._buildinNumber):
            return f"{node.value}"
        else:
            assert False, f"visit_Constant is not done  ... type={node.type}"

    def visit_fString(self, node)						 ->  TextBlock:
        formater = node.formater; assert formater, "the fString.formater should be set in aigr"
        string, args = fString_2_modulo(node.value)
        if len(args) == 0:
            return f'''"{string}"'''
        return f'''"{string}" % ({", ".join(str(arg) for arg in args)},)'''


    def visit_ID(self, node)							 ->  TextBlock: # GAM: Nog niet overal gebruikt (bijna niet)
        if isinstance(node.context, aigr.Ref) and node.context.reference != None:
            return self.idref.portray(node)
        # Any other .context has no effect
        txt = str(node)
        logger.debug("visit_ID: %s, Simply render as str: >>%s<<", node, txt)
        return txt

    def visit_RPy_unit(self, node)						 ->  TextBlock:
        txt = Block()
        txt += self._file_header(node)
        txt += self.render_subNodes(node)
        return txt

# XXX ToDo: move 'CC' out of 'RPy' (`castle/writers/RPy_buildin`?) and fix here
    def _file_header(self, node) -> TextBlock:
        return  """\
from castle.writers.RPy_buildin import buildin
from castle.writers.RPy_buildin import base
\n\n"""

    def visit_Become(self, node)						 ->  TextBlock: # BUSY
        if len(node.targets) != len(node.values):
            raise NotImplementedError("Number of targets and values does not match. That isn't implementation yet")
        assert len(node.targets) == 1, "Only single-assignment is supported"

        txt = Block()
        lhs, rhs = self.visit(node.targets[0]), self.visit(node.values[0])
        logger.debug(f"visit_Become\t {lhs=} {rhs=} -- {node=}")

        txt += f"{lhs} = {rhs}"
        return txt


    def visit_EventProtocol(self, node)					 ->  TextBlock:
        protocol_name = self.portray.CC_ProtocolName_prefix(node.name)

        assert node.based_on is None, f"Not expected inheritence: {node.based_on} in {node}"
        inherit_from = "None"

        txt = Block(f"""{protocol_name} = {self.portray.BuildInProtocol()}(name="{node.name}",""")
        txt.sub(Block((
            f"kind = buildin.CC_ProtocolKind.Event,", # ToDo: Portray
            f"inherit_from = {inherit_from},",
            f"events = [])")))
        return txt

    def visit_EventOverPort(self, node)				     ->  TextBlock:
        return self.machinery.render_EventOverPort(self, node)

    def visit_EventToSub(self, node)				     ->  TextBlock:
        return self.machinery.render_EventToSub(self, node)

